Fix Makefile build